@@ -74,6 +74,9 @@ Core
 * Fix table editor bug found by Jeff Boes <jeff@endpoint.com> which
   prevented custom widget type from working.
 
+* Shorthand added to allow beginning/ending year with date widget
+  name (i.e. yearbegin1934, yearend=0000 where 0000 means current year).
+
 Payment
 -------
 
